k8s/backoffice-consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backoffice-consumer
  namespace: logistics-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backoffice-consumer
  template:
    metadata:
      labels:
        app: backoffice-consumer
    spec:
      containers:
        - name: backoffice-consumer
          image: logistics-platform:latest
          imagePullPolicy: Never
          command: ['node', 'dist/apps/backoffice/consumers/start.js']
